--- a/vcbridge-admin/application/src/main/resources/templates/listTemplate.html
+++ b/vcbridge-admin/application/src/main/resources/templates/listTemplate.html
@@ -31,7 +31,7 @@
         </div>
         <div class="row">
           <div class="col-md-8">
-            <form class="form form-inline">
+            <!-- <form class="form form-inline">
               <div class="form-group">
                 <input class="form-control-sm" type="text" placeholder="Search by subject" />
               </div>
@@ -39,15 +39,15 @@
                 <button type="submit" class="btn btn-primary">Search</button>
                 <button type="submit" class="btn btn-default">Reset</button>
               </div>
-            </form>
+            </form> -->
           </div>
           <div class="col-md-4 text-right">
             <button id="cancel_meeting_button" type="button" class="btn btn-danger btn-outline" th:classappend="${#lists.size(templates.content)}>0?'':'disabled'">
               <span class="glyphicon glyphicon-remove"></span> Delete template
             </button>
-            <button id="moreactions_meeting_button" type="button" class="btn btn-primary btn-outline" th:classappend="${#lists.size(templates.content)}>0?'':'disabled'">
+            <!-- <button id="moreactions_meeting_button" type="button" class="btn btn-primary btn-outline" th:classappend="${#lists.size(templates.content)}>0?'':'disabled'">
               <span class="glyphicon glyphicon-wrench"></span> More actions
-            </button>
+            </button> -->
           </div>
         </div>
         <br />
