--- a/configuration-service/app/src/main/resources/static/assets/css/custom.css
+++ b/configuration-service/app/src/main/resources/static/assets/css/custom.css
@@ -134,7 +134,7 @@ label.error{
     color: #c9302c;
     display: block;
 }
-input.error {
+input.error, select.error {
     border-color: #c9302c;
 }
 
