--- a/configuration-service/app/src/main/resources/templates/pages/csp/list.html
+++ b/configuration-service/app/src/main/resources/templates/pages/csp/list.html
@@ -28,7 +28,7 @@
             <div id="toolbar" class="btn-group">
                 <a href="pages/csp/add.html" th:href="${addCspUrl}" class="btn btn-primary"><i class="glyphicon glyphicon-plus"></i> Register CSP</a>
             </div>
-            <table data-toggle="table"
+            <table id="csp-table" data-toggle="table"
                    th:attr="data-url=${dataCspUrl}"
                    data-cache="false"
                    data-query-params="queryParams"
@@ -43,6 +43,7 @@
                 <thead>
                 <tr>
                     <th data-field="icon" data-align="center"></th>
+                    <th data-field="cspId" data-sortable="true">CSP Id</th>
                     <th data-field="name" data-sortable="true">CSP Name</th>
                     <th data-field="domainName" data-sortable="true">Domain</th>
                     <th data-field="registrationDate" data-sortable="true">Registered</th>
@@ -61,7 +62,7 @@
             <p>&nbsp;</p>
             <div class="alert alert-warning alert-dismissible" role="alert">
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <strong>Hint (demo only)</strong> Any CSP shall be edited or deleted anytime.
+                <strong>Hint (demo only)</strong> Any CSP shall be edited or deleted anytime ???.
             </div>
         </div>
     </div>
@@ -70,7 +71,15 @@
 
 
 <th:block th:replace="fragments::scripts"></th:block>
-<script th:src="@{/assets/js/pages/csps.js}"></script>
+
+<script th:src="@{/webjars/bootstrap3-dialog/1.35.3/dist/js/bootstrap-dialog.min.js}"></script>
+
+<script th:inline="javascript">
+    /*<![CDATA[*/
+    var REMOVE_URL = [[${removeCspUrl}]];
+    /*]]>*/
+</script>
+<script th:src="@{/assets/js/pages/csp/list.js}"></script>
 
 </body>
 
