Cpnfiguration Service API + UI updates.

--- a/configuration-service/app/src/main/resources/templates/pages/csp/update.html
+++ b/configuration-service/app/src/main/resources/templates/pages/csp/update.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments::head(title='Update CSP', description='update csp description')"></head>
+<head th:replace="fragments::head(title='Update CSP', description='update csp description')">
+    <script src="../../../static/assets/js/pages/csp/update.js"></script>
+</head>
 
 <body>
 
