--- a/configuration-service/app/src/main/resources/templates/pages/dashboard.html
+++ b/configuration-service/app/src/main/resources/templates/pages/dashboard.html
@@ -41,10 +41,10 @@
                     <th data-field="icon" data-align="center"></th>
                     <th data-field="name" data-sortable="true">CSP Name</th>
                     <th data-field="domain" data-sortable="true">Domain</th>
-                    <th data-field="ts" data-sortable="true">Last Recorded</th>
-                    <th data-field="status" data-sortable="true" data-align="center">Status</th>
-                    <th data-field="conf-updates" data-sortable="false" data-visible="false" class="col-xs-1">Configured Updates</th>
-                    <th data-field="report-updates" data-sortable="false" data-visible="false" class="col-xs-1">Reported Updates</th>
+                    <th data-field="registrationDate" data-sortable="true">Registration Date</th>
+                    <th data-field="lastUpdate" data-sortable="true">Last Update</th>
+                    <th data-field="confUpdates" data-sortable="false" data-visible="false" class="col-xs-1">Configured Updates</th>
+                    <th data-field="reportUpdates" data-sortable="false" data-visible="false" class="col-xs-1">Reported Updates</th>
                     <th data-field="btn" data-sortable="false" data-align="center"></th>
                 </tr>
                 </thead>
