--- a/configuration-service/app/src/main/resources/templates/pages/manage.html
+++ b/configuration-service/app/src/main/resources/templates/pages/manage.html
@@ -25,12 +25,70 @@
 
     <div class="row">
         <div class="col-md-12">
-            <form method="POST" class="team-form" id="team-form">
-                <input name="csrfmiddlewaretoken" value="zKg9kV2yr6LySN4mmfgaQGBJ6doeTrOw" type="hidden"></input>
+            <form method="POST" action="#" id="management-form">
+                <input id="cspId" name="cspId" th:value="${cspId}" type="hidden"></input>
 
                 <div class="row">
                     <div class="col-md-12" style="text-align: right">
-                        <a th:href="@{/dashboard.html}" href="dashboard.html" class="save btn btn-default">Cancel</a>
+                        <a th:href="${dashboardUrl}" class="save btn btn-default">Cancel</a>
+                        <button type="submit" class="save btn btn-success">Save</button>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12 col-sm-12">
+                        <p>&nbsp;</p>
+                    </div>
+                </div>
+
+                <th:block th:each="management,row : ${managementRows}">
+                    <div class="row">
+                        <!--Enable-->
+                        <div class="col-md-2 col-xs-12">
+                            <div class="form-group">
+                                <label th:hidden="${!row.index.equals(0)}">Enable:</label>
+                                <br th:hidden="${!row.index.equals(0)}"/>
+                                <input class="form-control checkbox-app" th:id="'module_enable'+${managementRows.get(row.index).getModuleId()}" type="checkbox" th:checked="${managementRows.get(row.index).getModuleEnabled()}" th:attr="data-module-id=${managementRows.get(row.index).getModuleId()}"></input>
+                            </div>
+                        </div>
+                        <!--Short Name-->
+                        <div class="col-md-6 col-xs-12">
+                            <div class="form-group">
+                                <label th:hidden="${!row.index.equals(0)}">Short Name:</label>
+                                <input class="form-control" th:id="'module_short_name'+${managementRows.get(row.index).getModuleId()}" type="text" th:value="${managementRows.get(row.index).getModuleShortName()}" readonly="readonly" th:attr="data-module-id=${managementRows.get(row.index).getModuleId()}"></input>
+                            </div>
+                        </div>
+                        <!--Installed Version-->
+                        <div class="col-md-2 col-xs-12">
+                            <div class="form-group">
+                                <label th:hidden="${!row.index.equals(0)}">Installed Version:</label>
+                                <input class="form-control v" th:id="'module_installed_version'+${managementRows.get(row.index).getModuleId()}" maxlength="5" type="text" th:value="${managementRows.get(row.index).getInstalledVersion()}" readonly="readonly" th:attr="data-module-id=${managementRows.get(row.index).getModuleId()}"></input>
+                            </div>
+                        </div>
+                        <!--Set Version-->
+                        <div class="col-md-2 col-xs-12">
+                            <div class="form-group">
+                                <label th:hidden="${!row.index.equals(0)}">Set Version:</label>
+                                <select class="form-control v-select" th:id="'module_set_version'+${managementRows.get(row.index).getModuleId()}" th:disabled="${!managementRows.get(row.index).getModuleEnabled()}" th:attr="data-module-id=${managementRows.get(row.index).getModuleId()}">
+                                    <option></option>
+                                    <th:block th:each="version,r : ${managementRows.get(row.index).getAvailableVersions()}">
+                                        <option th:value="${version}" th:selected="${version==managementRows.get(row.index).getSelectedVersion()}" th:text="${managementRows.get(row.index).getAvailableVersionsT().get(r.index)}"></option>
+                                    </th:block>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                </th:block>
+
+                <div class="row">
+                    <div class="col-md-12 col-sm-12">
+                        <p>&nbsp;</p>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12" style="text-align: right">
+                        <a th:href="${dashboardUrl}" class="save btn btn-default">Cancel</a>
                         <button type="submit" class="save btn btn-success">Save</button>
                     </div>
                 </div>
@@ -42,76 +100,7 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-md-2 col-xs-12">
-                        <div class="form-group">
-                            <label for="module_enable1">Enable:</label>
-                            <br/>
-                            <input class="form-control checkbox-app" id="module_enable1" name="module_enable[]" type="checkbox" data-module-id="1"></input>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-xs-12">
-                        <div class="form-group">
-                            <label for="module_short_name1">Short Name:</label>
-                            <input class="form-control" id="module_short_name1" name="module_short_name[]" type="text" value="configuration-service-client" readonly="readonly" data-module-id="1"></input>
-                        </div>
-                    </div>
-                    <div class="col-md-2 col-xs-12">
-                        <div class="form-group">
-                            <label for="module_installed_version1">Installed Version:</label>
-                            <input class="form-control v" id="module_installed_version1" maxlength="5" name="module_installed_version[]" type="text" value="10000" readonly="readonly" data-module-id="1"></input>
-                        </div>
-                    </div>
-                    <div class="col-md-2 col-xs-12">
-                        <div class="form-group">
-                            <label for="module_set_version1">Set Version:</label>
-                            <select class="form-control" id="module_set_version1" name="module_set_version[]" disabled="disabled" data-module-id="1">
-                                <option></option>
-                                <option>1.1.000</option>
-                                <option>1.1.001</option>
-                                <option>1.1.002</option>
-                            </select>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-2 col-xs-12">
-                        <div class="form-group">
-                            <input class="form-control checkbox-app" id="module_enable2" name="module_enable[]" type="checkbox" data-module-id="2" checked="checked"></input>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-xs-12">
-                        <div class="form-group">
-                            <input class="form-control" id="module_short_name2" name="module_short_name[]" type="text" value="misp-installation" readonly="readonly" data-module-id="2"></input>
-                        </div>
-                    </div>
-                    <div class="col-md-2 col-xs-12">
-                        <div class="form-group">
-                            <input class="form-control v" id="module_installed_version2" maxlength="5" name="module_installed_version[]" type="text" value="11000" readonly="readonly" data-module-id="2"></input>
-                        </div>
-                    </div>
-                    <div class="col-md-2 col-xs-12">
-                        <div class="form-group">
-                            <select class="form-control" id="module_set_version2" name="module_set_version[]" data-module-id="2">
-                                <option></option>
-                                <option>1.1.001</option>
-                                <option>1.1.002</option>
-                            </select>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="row">
-                    <div class="col-md-12 col-sm-12">
-                        <p>&nbsp;</p>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-md-12" style="text-align: right">
-                        <a th:href="@{/dashboard.html}" href="dashboard.html" class="save btn btn-default">Cancel</a>
-                        <button type="submit" class="save btn btn-success">Save</button>
-                    </div>
+                    <div class="col-md-12" id="result"></div>
                 </div>
 
             </form>
@@ -121,8 +110,20 @@
 </div>
 
 <th:block th:replace="fragments::scripts"></th:block>
+
+<script th:src="@{/webjars/jquery-validation/1.16.0/jquery.validate.min.js}"></script>
+<script th:src="@{/webjars/jquery-validation/1.16.0/additional-methods.min.js}"></script>
 <script th:src="@{/webjars/jquery-mask-plugin/1.14.10/dist/jquery.mask.min.js}"></script>
 <script th:src="@{/webjars/bootstrap-checkbox/1.2.5/dist/js/bootstrap-checkbox.min.js}"></script>
+
+<script th:src="@{/assets/js/vendor/jquery.serializeObject.js}"></script>
+
+<script th:inline="javascript">
+    /*<![CDATA[*/
+    var POST_URL = [[${saveUrl}]];
+    var REDIRECT_URL = [[${dashboardUrl}]];
+    /*]]>*/
+</script>
 <script th:src="@{/assets/js/pages/manage.js}"></script>
 
 </body>
