--- a/configuration-service/app/src/main/resources/templates/pages/dashboard.html
+++ b/configuration-service/app/src/main/resources/templates/pages/dashboard.html
@@ -45,7 +45,7 @@
                     <th data-field="lastUpdate" data-sortable="true">Last Update</th>
                     <th data-field="confUpdates" data-sortable="false" data-visible="false" class="col-xs-1">Configured Updates</th>
                     <th data-field="reportUpdates" data-sortable="false" data-visible="false" class="col-xs-1">Reported Updates</th>
-                    <th data-field="btn" data-sortable="false" data-align="center"></th>
+                    <th data-field="btn" data-sortable="false" data-align="center">Actions</th>
                 </tr>
                 </thead>
 
