--- a/configuration-service/app/src/main/resources/templates/pages/module/register.html
+++ b/configuration-service/app/src/main/resources/templates/pages/module/register.html
@@ -80,6 +80,15 @@
 
                 <div class="row">
                     <div class="col-md-12 col-sm-12">
+                        <div class="form-group">
+                            <label for="module_description">Description:</label>
+                            <textarea class="form-control" id="module_description" name="module_description"></textarea>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12 col-sm-12">
                         <p>&nbsp;</p>
                     </div>
                 </div>
@@ -124,7 +133,7 @@
 </script>
 
 
-<script th:src="@{/assets/js/pages/module.js}"></script>
+<script th:src="@{/assets/js/pages/module/register.js}"></script>
 
 </body>
 
