--- a/configuration-service/app/src/main/resources/templates/pages/csp/list.html
+++ b/configuration-service/app/src/main/resources/templates/pages/csp/list.html
@@ -50,7 +50,7 @@
                     <th data-field="internalIps" data-sortable="false" data-visible="false" class="col-xs-1">Internal IPs</th>
                     <th data-field="externalIps" data-sortable="false" data-visible="false" class="col-xs-1">External IPs</th>
                     <th data-field="contacts" data-sortable="true" data-visible="false" class="col-xs-1">Contacts</th>
-                    <th data-field="btn" data-sortable="false" data-align="center"></th>
+                    <th data-field="btn" data-sortable="false" data-align="center">Actions</th>
                 </tr>
                 </thead>
             </table>
