--- a/configuration-service/app/src/main/resources/templates/pages/module/list.html
+++ b/configuration-service/app/src/main/resources/templates/pages/module/list.html
@@ -28,7 +28,7 @@
             <div id="toolbar" class="btn-group">
                 <a href="pages/module/add.html" th:href="${addModuleUrl}" class="btn btn-primary"><i class="glyphicon glyphicon-plus"></i> Register Module</a>
             </div>
-            <table data-toggle="table"
+            <table id="module-table" data-toggle="table"
                    th:attr="data-url=${dataModuleUrl}"
                    data-cache="false"
                    data-query-params="queryParams"
@@ -50,7 +50,8 @@
                     <th data-field="isDefault" data-sortable="false" data-visible="false" data-align="center">Default</th>
                     <th data-field="priority" data-sortable="true" data-align="center">Priority</th>
                     <th data-field="hash" data-sortable="true" data-visible="false" class="col-xs-1 wrapped">Hash</th>
-                    <th data-field="btn" data-sortable="false" data-align="center"></th>
+                    <th data-field="description" data-sortable="true" data-visible="false" class="col-xs-1 wrapped">Description</th>
+                    <th data-field="btn" data-sortable="false" data-align="center">Actions</th>
                 </tr>
                 </thead>
             </table>
@@ -71,7 +72,16 @@
 
 
 <th:block th:replace="fragments::scripts"></th:block>
-<script th:src="@{/assets/js/pages/modules.js}"></script>
+
+<script th:src="@{/webjars/bootstrap3-dialog/1.35.3/dist/js/bootstrap-dialog.min.js}"></script>
+
+<script th:inline="javascript">
+    /*<![CDATA[*/
+    var REMOVE_URL = [[${removeModuleUrl}]];
+    /*]]>*/
+</script>
+
+<script th:src="@{/assets/js/pages/module/list.js}"></script>
 
 </body>
 
