--- a/integration-layer-dsl-api/il-anon/src/main/resources/templates/pages/mappings.html
+++ b/integration-layer-dsl-api/il-anon/src/main/resources/templates/pages/mappings.html
@@ -26,7 +26,7 @@
     <div class="row">
         <div class="col-md-12 col-sm-12">
             <div class="row" data-duplicate="contact" data-duplicate-min="2" data-duplicate-max="10">
-                <form action="#" th:action="@{/}" th:object="${integrationAnonData}" method="post" enctype="multipart/form-data">
+                <form action="#" th:action="@{/}" th:object="${mapping}" method="post" enctype="multipart/form-data">
                     <div class="col-md-3 col-xs-12">
                         <div class="form-group">
                             <label>CSP id:</label>
@@ -75,11 +75,11 @@
                                 <th>Actions</th>
                             </tr>
                             </thead>
-                            <tr th:id="${integrationAnonData.id}" th:each="integrationAnonData,iterStat: ${integrationAnonDataAll}">
+                            <tr th:id="${mapping.id}" th:each="mapping,iterStat: ${mappings}">
                                 <td th:text="${iterStat.count}"></td>
-                                <td th:text="${integrationAnonData.cspId}"></td>
-                                <td th:text="${integrationAnonData.dataType}"></td>
-                                <td th:text="${integrationAnonData.ruleset}"></td>
+                                <td th:text="${mapping.cspId}"></td>
+                                <td th:text="${mapping.dataType}"></td>
+                                <td th:text="${mapping.ruleset}"></td>
                                 <td><i class="fa fa-trash-o" aria-hidden="true"></i>
                                     <i class="fa fa-edit" aria-hidden="true"></i></td>
                             </tr>
