--- a/configuration-service/app/src/main/resources/templates/pages/module-version/register.html
+++ b/configuration-service/app/src/main/resources/templates/pages/module-version/register.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments::head(title='Modules', description='modules description')"></head>
+<head th:replace="fragments::head(title='Register Module Version', description='register module version description')"></head>
 
 <body>
 
@@ -19,18 +19,18 @@
 
     <div class="row">
         <div class="col-md-12">
-            <h2 class="page-header"><i class="fa fa-circle-o-notch"></i> Register Module</h2>
+            <h2 class="page-header"><i class="fa fa-file-zip-o"></i> Register Module Version for Module: <span th:utext="${moduleData.getName()}"></span></h2>
         </div>
     </div>
 
     <div class="row">
         <div class="col-md-12">
-            <form method="POST" action="#" id="module-form">
+            <form method="POST" action="#" enctype="multipart/form-data" id="module-version-form">
                 <input name="csrfmiddlewaretoken" value="zKg9kV2yr6LySN4mmfgaQGBJ6doeTrOw" type="hidden"></input>
 
                 <div class="row">
                     <div class="col-md-12" style="text-align: right">
-                        <a th:href="${moduleListUrl}" class="save btn btn-default">Cancel</a>
+                        <a th:href="${moduleVersionListUrl}" class="save btn btn-default">Cancel</a>
                         <button type="submit" class="save btn btn-success">Save</button>
                     </div>
                 </div>
@@ -38,21 +38,29 @@
                 <div class="row">
                     <div class="col-md-6 col-xs-12">
                         <div class="form-group">
-                            <label for="module_short_name">Short Name:</label>
-                            <input class="form-control" id="module_short_name" name="module_short_name" type="text"></input>
-                        </div>
-                    </div>
-                    <div class="col-md-4 col-xs-12">
-                        <div class="form-group">
-                            <label for="module_start_priority">Start Priority:</label>
-                            <input class="form-control p" id="module_start_priority" maxlength="3" name="module_start_priority" type="text"></input>
+                            <label for="module_full_name">Full Name:</label>
+                            <input class="form-control" id="module_full_name" name="module_full_name" type="text"></input>
                         </div>
                     </div>
                     <div class="col-md-2 col-xs-12">
                         <div class="form-group">
-                            <label for="module_is_default">Default:</label>
-                            <br/>
-                            <input class="form-control" id="module_is_default" name="module_is_default" type="checkbox"></input>
+                            <label for="module_version">Version:</label>
+                            <input class="form-control v" id="module_version" maxlength="5" name="module_version" type="text"></input>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-xs-12">
+                        <div class="form-group">
+                            <label for="module_file">File:</label>
+                            <input id="module_file" name="module_file" type="file" class="file-loading"></input>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12 col-sm-12">
+                        <div class="form-group">
+                            <label for="module_description">Description:</label>
+                            <textarea class="form-control" id="module_description" name="module_description"></textarea>
                         </div>
                     </div>
                 </div>
@@ -65,7 +73,7 @@
 
                 <div class="row">
                     <div class="col-md-12" style="text-align: right">
-                        <a th:href="${moduleListUrl}" class="save btn btn-default">Cancel</a>
+                        <a th:href="${moduleVersionListUrl}" class="save btn btn-default">Cancel</a>
                         <button type="submit" class="save btn btn-success">Save</button>
                     </div>
                 </div>
@@ -90,20 +98,19 @@
 <th:block th:replace="fragments::scripts"></th:block>
 
 <script th:src="@{/webjars/jquery-validation/1.16.0/jquery.validate.min.js}"></script>
+<script th:src="@{/webjars/jquery-validation/1.16.0/additional-methods.min.js}"></script>
 <script th:src="@{/webjars/jquery-mask-plugin/1.14.10/dist/jquery.mask.min.js}"></script>
-<script th:src="@{/webjars/bootstrap-checkbox/1.2.5/dist/js/bootstrap-checkbox.min.js}"></script>
-
-<script th:src="@{/assets/js/vendor/jquery.serializeObject.js}"></script>
+<script th:src="@{/webjars/bootstrap-fileinput/4.4.0/js/fileinput.min.js}"></script>
 
 <script th:inline="javascript">
     /*<![CDATA[*/
-    var POST_URL = [[${moduleSaveUrl}]];
-    var REDIRECT_URL = [[${moduleListUrl}]];
+    var POST_URL = [[${moduleVersionSaveUrl}]];
+    var REDIRECT_URL = [[${moduleVersionListUrl}]];
     /*]]>*/
 </script>
 
 
-<script th:src="@{/assets/js/pages/module/register.js}"></script>
+<script th:src="@{/assets/js/pages/module-version/register.js}"></script>
 
 </body>
 
