--- a/configuration-service/app/src/main/resources/templates/pages/module/update.html
+++ b/configuration-service/app/src/main/resources/templates/pages/module/update.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments::head(title='Modules', description='modules description')"></head>
+<head th:replace="fragments::head(title='Update Module', description='update module description')">
+</head>
 
 <body>
 
@@ -19,14 +20,17 @@
 
     <div class="row">
         <div class="col-md-12">
-            <h2 class="page-header"><i class="fa fa-circle-o-notch"></i> Register Module</h2>
+            <h2 class="page-header"><i class="fa fa-circle-o-notch"></i> Update Module</h2>
         </div>
     </div>
+
 
     <div class="row">
         <div class="col-md-12">
             <form method="POST" action="#" id="module-form">
-                <input name="csrfmiddlewaretoken" value="zKg9kV2yr6LySN4mmfgaQGBJ6doeTrOw" type="hidden"></input>
+                <!--<input name="csrfmiddlewaretoken" value="zKg9kV2yr6LySN4mmfgaQGBJ6doeTrOw" type="hidden"></input>-->
+
+                <input id="module_id" name="module_id" type="hidden" th:value="${moduleData.getId()}"></input>
 
                 <div class="row">
                     <div class="col-md-12" style="text-align: right">
@@ -36,23 +40,29 @@
                 </div>
 
                 <div class="row">
+                    <div class="col-md-6 col-sm-12">
+                        <p class="lead pull-left">CSP Information</p>
+                    </div>
+                </div>
+
+                <div class="row">
                     <div class="col-md-6 col-xs-12">
                         <div class="form-group">
                             <label for="module_short_name">Short Name:</label>
-                            <input class="form-control" id="module_short_name" name="module_short_name" type="text"></input>
+                            <input class="form-control" id="module_short_name" name="module_short_name" type="text" th:value="${moduleData.getName()}"></input>
                         </div>
                     </div>
                     <div class="col-md-4 col-xs-12">
                         <div class="form-group">
                             <label for="module_start_priority">Start Priority:</label>
-                            <input class="form-control p" id="module_start_priority" maxlength="3" name="module_start_priority" type="text"></input>
+                            <input class="form-control p" id="module_start_priority" maxlength="3" name="module_start_priority" type="text" th:value="${moduleData.getStartPriority()}"></input>
                         </div>
                     </div>
                     <div class="col-md-2 col-xs-12">
                         <div class="form-group">
                             <label for="module_is_default">Default:</label>
                             <br/>
-                            <input class="form-control" id="module_is_default" name="module_is_default" type="checkbox"></input>
+                            <input class="form-control" id="module_is_default" name="module_is_default" type="checkbox" th:checked="${moduleData.getIsDefault()}"></input>
                         </div>
                     </div>
                 </div>
@@ -84,6 +94,7 @@
         </div>
     </div>
 
+
 </div>
 
 
@@ -97,13 +108,11 @@
 
 <script th:inline="javascript">
     /*<![CDATA[*/
-    var POST_URL = [[${moduleSaveUrl}]];
+    var POST_URL = [[${moduleUpdateUrl}]];
     var REDIRECT_URL = [[${moduleListUrl}]];
     /*]]>*/
 </script>
-
-
-<script th:src="@{/assets/js/pages/module/register.js}"></script>
+<script th:src="@{/assets/js/pages/module/update.js}"></script>
 
 </body>
 
